# film_watch_site_api

./: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint  manage.py  pyproject.toml  requirements.txt
apps/: urls.py
apps/movies/: admin.py  apps.py  models.py  paginations.py  serializers.py  urls.py
apps/movies/migrations/: 0001_initial.py
apps/movies/serializers/: favourite_serializer.py  history_serializer.py
apps/movies/views/: favourite.py  history.py  most_liked.py  movie.py
apps/shared/utils/: send_to_email.py
apps/user_auth/: apps.py  urls.py
apps/user_auth/serializers/: forgot_password_serializer.py  register_serializer.py
apps/user_auth/views/: forgot_password_view.py  register_view.py
apps/users/: models.py  urls.py
apps/users/models/: __init__.py  user.py
apps/users/serializers/: favourite_serializer.py  forgot_password_serializer.py  history_serializer.py  register_serializer.py  users_serializer.py
apps/users/views/: forgot_password_view.py  history.py  register_view.py  user_view.py
compose/nginx/: nginx.conf
nginx/: nginx.conf
root/: __init__.py  celery.py  get_data_task.py  settings.py  swagger.py  urls.py
templates/: activate-account-for-register.html  test.html
