[tool.poetry]
name = "film-watch-site-api"
version = "0.1.0"
description = ""
authors = ["AbdurashiDIDO <abdurashiddido@gmail.com>"]
readme = "README.md"
packages = [{include = "film_watch_site_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-autoslug = "^1.9.9"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.6"
coreapi = "^2.3.3"
pyyaml = "^6.0"
celery = "^5.3.0"
pytils = "^0.4.1"
djangorestframework-simplejwt = "^5.2.2"
django-elasticsearch-dsl-drf = "^0.22.5"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"
django-storages = "^1.13.2"
boto3 = "^1.26.159"
kinopoiskpy = "^0.9.0"
cinemagoer = "^2023.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
